POST: Swap sigs in figs, embed biblio

--- a/lenls/post-proc.tex
+++ b/lenls/post-proc.tex
@@ -182,19 +182,19 @@ and apply the surface lexicon.
   \centering
   \begin{subfigure}[b]{0.25\textwidth}
     \centering
-    \includegraphics[height=0.2\textheight]{../diagrams/double-acg.pdf}
+    \includegraphics[height=0.2\textheight]{diagrams/double-acg.pdf}
     \caption{\label{fig:acg-comp-basic} Connecting form with meaning.}
   \end{subfigure}
   \qquad
   \begin{subfigure}[b]{0.25\textwidth}
     \centering
-    \includegraphics[height=0.2\textheight]{../diagrams/serial-over-parallel.pdf}
+    \includegraphics[height=0.2\textheight]{diagrams/serial-over-parallel.pdf}
     \caption{\label{fig:acg-comp-constr} Adding a constraint (Constraint).}
   \end{subfigure}
   \qquad
   \begin{subfigure}[b]{0.25\textwidth}
     \centering
-    \includegraphics[height=0.2\textheight]{../diagrams/parallel-over-serial.pdf}
+    \includegraphics[height=0.2\textheight]{diagrams/parallel-over-serial.pdf}
     \caption{\label{fig:acg-comp-sem} Distinguishing syntactic and
       semantic ambiguities (Elaboration).}
   \end{subfigure}
@@ -386,7 +386,7 @@ the expected interpretation.
 
 \begin{figure}
   \centering
-  \includegraphics[height=0.3\textheight]{../diagrams/final.pdf}
+  \includegraphics[height=0.3\textheight]{diagrams/final.pdf}
   \caption{\label{fig:gacg} A graphical ACG that implements two
       independent syntactic constraints and distinguishes syntactic and
       semantic ambiguities.}
@@ -615,7 +615,7 @@ only intersection, which enables constraint-based composition of grammars.
 
 \begin{figure}
   \centering
-  \includegraphics[height=0.3\textheight]{../diagrams/diamond-grammar.pdf}
+  \includegraphics[height=0.3\textheight]{diagrams/diamond-grammar.pdf}
   \caption{\label{fig:diamond} The diamond-shaped G-ACG $\mathcal{D}$.}
 \end{figure}
 
@@ -735,13 +735,13 @@ our approach.
   \centering
   \begin{subfigure}[b]{0.4\textwidth}
     \centering
-    \includegraphics[height=0.2\textheight]{../diagrams/story-single-cont.pdf}
+    \includegraphics[height=0.2\textheight]{diagrams/story-single-cont.pdf}
     \caption{\label{fig:single-cont} An extraction constraint }
   \end{subfigure}
   \qquad
   \begin{subfigure}[b]{0.4\textwidth}
     \centering
-    \includegraphics[height=0.2\textheight]{../diagrams/story-merged-conts.pdf}
+    \includegraphics[height=0.2\textheight]{diagrams/story-merged-conts.pdf}
     \caption{\label{fig:merged-conts} G-ACG merging the three extraction
       constraints.}
   \end{subfigure}
@@ -766,14 +766,14 @@ negation we discussed before and some simple notion of agreement, respectively
   \centering
   \begin{subfigure}[b]{0.4\textwidth}
     \centering
-    \includegraphics[height=0.2\textheight]{../diagrams/story-conts-elab.pdf}
+    \includegraphics[height=0.2\textheight]{diagrams/story-conts-elab.pdf}
     \caption{\label{fig:conts-elab} Elaborating the lexicon from syntax to
       strings. }
   \end{subfigure}
   \qquad
   \begin{subfigure}[b]{0.4\textwidth}
     \centering
-    \includegraphics[height=0.2\textheight]{../diagrams/story-final-synth.pdf}
+    \includegraphics[height=0.2\textheight]{diagrams/story-final-synth.pdf}
     \caption{\label{fig:final-synth} Adding our own syntactic constraints,
       $Neg$ and $Agr$.}
   \end{subfigure}
@@ -955,7 +955,70 @@ grammars to verify the usability of our approach.
 % ---- Bibliography ----
 %
 
-\bibliographystyle{splncs}
-\bibliography{../biblio}
+\begin{thebibliography}{10}
+
+\bibitem{de2001towards}
+De~Groote, P.:
+\newblock Towards abstract categorial grammars.
+\newblock In: Proceedings of the 39th Annual Meeting on Association for
+  Computational Linguistics, Association for Computational Linguistics (2001)
+  252--259
+
+\bibitem{de2006towards}
+De~Groote, P.:
+\newblock Towards a montagovian account of dynamics.
+\newblock In: Proceedings of SALT. Volume~16. (2006)
+
+\bibitem{qian2011event}
+Qian, S., Amblard, M.:
+\newblock Event in compositional dynamic semantics.
+\newblock In: Logical Aspects of Computational Linguistics.
+\newblock (2011)
+
+\bibitem{asher2011sdrt}
+Asher, N., Pogodalla, S.:
+\newblock Sdrt and continuation semantics.
+\newblock In: New Frontiers in Artificial Intelligence. Volume 6797 of Lecture
+  Notes in Computer Science.
+\newblock (2011)
+
+\bibitem{asher2011montagovian}
+Asher, N., Pogodalla, S.:
+\newblock A montagovian treatment of modal subordination.
+\newblock In: Proceedings of SALT. Volume~20. (2011)  387--405
+
+\bibitem{pogodalla2012controlling}
+Pogodalla, S., Pompigne, F.:
+\newblock Controlling extraction in abstract categorial grammars.
+\newblock In: Formal Grammar. (2012)
+
+\bibitem{degroote02}
+de~Groote, P.:
+\newblock Tree-adjoining grammars as abstract categorial grammars.
+\newblock In: TAG+6, Proceedings of the sixth International Workshop on Tree
+  Adjoining Grammars and Related Frameworks, Universit\`a di Venezia (2002)
+  145--150
+
+\bibitem{pogodalla2007generalizing}
+Pogodalla, S.:
+\newblock Generalizing a proof-theoretic account of scope ambiguity.
+\newblock In: 7th International Workshop on Computational Semantics. (2007)
+
+\bibitem{montague1973proper}
+Montague, R.:
+\newblock The proper treatment of quantification in ordinary english
+
+\bibitem{perrier2007french}
+Perrier, G.:
+\newblock A french interaction grammar.
+\newblock In: International Conference on Recent Advances in Natural Language
+  Processing. (2007)
+
+\bibitem{de2007type}
+de~Groote, P., Maarek, S.:
+\newblock Type-theoretic extensions of abstract categorial grammars.
+\newblock ESSLLI 2007 (2007)
+
+\end{thebibliography}
 
 \end{document}
